tests/snapshots/semantics__assigning_context.snap
---
source: tests/semantics.rs
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`context.` variables are read-only",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 15,
                        },
                        primary: false,
                    },
                ],
            ),
            help: Some(
                "Try assigning to `variable.` or `temp.` instead",
            ),
            severity: Error,
        },
    },
]
