tests/snapshots/semantics__continue_outside_loop.snap
---
source: tests/semantics.rs
expression: out
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "`continue` is only supported inside `loop` and `for_each` expressions",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 8,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
