tests/snapshots/semantics__illegal_string_operation_left.snap
---
source: tests/semantics.rs
---
[
    Diagnostic {
        inner: DiagnosticInner {
            message: "Strings only support `==` and `!=` operators",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: 10,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
        },
    },
]
